--- a/nongrid.html
+++ b/nongrid.html
@@ -58,6 +58,7 @@
 
         .loading-bar {
             background-color: #f55b7c;
+            border-radius: 16px;
         }
 
         .box {
@@ -107,20 +108,58 @@
                         <p>07398721477</p>
                         <hr>
                         <h2>Areas of Expertise</h2>
+                        <h3>Languages</h3>
                         <!--LOADING BAR-->
                         <p>HTML | CSS | PHP</p>
-                        <div style="background-color: lightgray;">
+                        <div style="background-color: lightgray; border-radius: 16px;">
                             <div class="loading-bar" style="width: 90%; text-align: center;">
                                 <p style="color: white;">90%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <p>C#</p>
-                        <div style="background-color: lightgray;">
+                        <div style="background-color: lightgray;  border-radius: 16px;">
                             <div class="loading-bar" style="width: 80%; text-align: center;">
                                 <p style="color: white;">80%</p>
                             </div>
                         </div>
+                        <!--LOADING BAR-->
+                        <p>MySQL</p>
+                        <div style="background-color: lightgray;  border-radius: 16px;">
+                            <div class="loading-bar" style="width: 80%; text-align: center;">
+                                <p style="color: white;">80%</p>
+                            </div>
+                        </div>
+                        <!--LOADING BAR-->
+                        <p>C++</p>
+                        <div style="background-color: lightgray;  border-radius: 16px;">
+                            <div class="loading-bar" style="width: 60%; text-align: center;">
+                                <p style="color: white;">60%</p>
+                            </div>
+                        </div>
+                        <h3>Programs</h3>
+                        <!--LOADING BAR-->
+                        <p>Photoshop | Illustrator</p>
+                        <div style="background-color: lightgray;  border-radius: 16px;">
+                            <div class="loading-bar" style="width: 90%; text-align: center;">
+                                <p style="color: white;">90%</p>
+                            </div>
+                        </div>
+                        <!--LOADING BAR-->
+                        <p>Unity</p>
+                        <div style="background-color: lightgray;  border-radius: 16px;">
+                            <div class="loading-bar" style="width: 80%; text-align: center;">
+                                <p style="color: white;">80%</p>
+                            </div>
+                        </div>
+                        <!--LOADING BAR-->
+                        <p>Visual Studio | XCode</p>
+                        <div style="background-color: lightgray;  border-radius: 16px;">
+                            <div class="loading-bar" style="width: 70%; text-align: center;">
+                                <p style="color: white;">70%</p>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
                 <div class="box" style="height: 100px;"></div>
