--- a/nongrid.html
+++ b/nongrid.html
@@ -43,6 +43,13 @@
             position: relative;
         }
 
+        hr {
+            border:0;
+            border-top:1px solid #eee;
+            color: rgb(211, 211, 211);
+            width: 90%;
+        }
+
         .text-over-image {
             position: absolute;
             padding: 0 16px;
@@ -61,6 +68,11 @@
             border-radius: 16px;
         }
 
+        .loading-bar-back {
+            background-color: rgb(226, 226, 226);
+            border-radius: 16px;
+        }
+
         .box {
             background-color: #ffffff;
             box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
@@ -68,7 +80,7 @@
         }
 
         .inner-box {
-            padding: 0.15px 16px;
+            padding: 0.15px 20px;
         }
 
         .grid {
@@ -98,7 +110,7 @@
                     <div class="display-container">
                         <img src="image.jpg" style="width: 100%">
                         <div class="text-over-image">
-                            <h1>Bradley Morrison</h1>
+                            <h1 style="color: white; text-shadow: 2px 2px 5px rgb(29, 29, 29)">Bradley Morrison</h1>
                         </div>
                     </div>
                     <div class="inner-box">
@@ -111,28 +123,28 @@
                         <h3>Languages</h3>
                         <!--LOADING BAR-->
                         <p>HTML | CSS | PHP</p>
-                        <div style="background-color: lightgray; border-radius: 16px;">
+                        <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 90%; text-align: center;">
                                 <p style="color: white;">90%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <p>C#</p>
-                        <div style="background-color: lightgray;  border-radius: 16px;">
+                        <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 80%; text-align: center;">
                                 <p style="color: white;">80%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <p>MySQL</p>
-                        <div style="background-color: lightgray;  border-radius: 16px;">
+                        <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 80%; text-align: center;">
                                 <p style="color: white;">80%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <p>C++</p>
-                        <div style="background-color: lightgray;  border-radius: 16px;">
+                        <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 60%; text-align: center;">
                                 <p style="color: white;">60%</p>
                             </div>
@@ -140,21 +152,21 @@
                         <h3>Programs</h3>
                         <!--LOADING BAR-->
                         <p>Photoshop | Illustrator</p>
-                        <div style="background-color: lightgray;  border-radius: 16px;">
+                        <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 90%; text-align: center;">
                                 <p style="color: white;">90%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <p>Unity</p>
-                        <div style="background-color: lightgray;  border-radius: 16px;">
+                        <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 80%; text-align: center;">
                                 <p style="color: white;">80%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <p>Visual Studio | XCode</p>
-                        <div style="background-color: lightgray;  border-radius: 16px;">
+                        <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 70%; text-align: center;">
                                 <p style="color: white;">70%</p>
                             </div>
