--- a/nongrid.html
+++ b/nongrid.html
@@ -8,6 +8,32 @@
 
         * {
             box-sizing: border-box;
+            font-size: 15px;
+        }
+
+        h1 {
+            font-size: 25px;
+            color:rgb(119, 119, 119);
+        }
+
+        .h1-name {
+            font-size: 35px;
+            color: white;
+            text-shadow: 2px 2px 5px rgb(29, 29, 29);
+        }
+
+        h2 {
+            font-size: 20px;
+            color:rgb(119, 119, 119);
+        }
+
+        h3 {
+            font-size: 15px;
+            color:rgb(139, 139, 139);
+        }
+
+        p {
+            margin: 18px 0;
         }
 
         .page {
@@ -16,8 +42,9 @@
             margin-right: auto;
         }
 
-        html {
+        html, body {
             font-family: "Lucida Sans", sans-serif;
+            line-height: 1.5;
         }
 
         .col-1 {width: 8.33%;}
@@ -45,9 +72,8 @@
 
         hr {
             border:0;
-            border-top:1px solid #eee;
-            color: rgb(211, 211, 211);
-            width: 90%;
+            border-top:1px solid rgb(226, 226, 226);
+            width: 95%;
         }
 
         .text-over-image {
@@ -66,6 +92,8 @@
         .loading-bar {
             background-color: #f55b7c;
             border-radius: 16px;
+            text-align: center;
+            color:white;
         }
 
         .loading-bar-back {
@@ -80,7 +108,7 @@
         }
 
         .inner-box {
-            padding: 0.15px 20px;
+            padding: 0.15px 20px 20px;
         }
 
         .grid {
@@ -110,7 +138,7 @@
                     <div class="display-container">
                         <img src="image.jpg" style="width: 100%">
                         <div class="text-over-image">
-                            <h1 style="color: white; text-shadow: 2px 2px 5px rgb(29, 29, 29)">Bradley Morrison</h1>
+                            <h1 class="h1-name">Bradley Morrison</h1>
                         </div>
                     </div>
                     <div class="inner-box">
@@ -119,56 +147,56 @@
                         <p>bradley_morrison@outlook.com</p>
                         <p>07398721477</p>
                         <hr>
-                        <h2>Areas of Expertise</h2>
-                        <h3>Languages</h3>
+                        <h1>Areas of Expertise</h1>
+                        <h2>Languages</h2>
                         <!--LOADING BAR-->
-                        <p>HTML | CSS | PHP</p>
+                        <h3>HTML | CSS | PHP</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 90%; text-align: center;">
-                                <p style="color: white;">90%</p>
+                            <div class="loading-bar" style="width: 90%;">
+                                <p>90%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
-                        <p>C#</p>
+                        <h3>C#</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 80%; text-align: center;">
-                                <p style="color: white;">80%</p>
+                            <div class="loading-bar" style="width: 80%;">
+                                <p>80%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
-                        <p>MySQL</p>
+                        <h3>MySQL</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 80%; text-align: center;">
-                                <p style="color: white;">80%</p>
+                            <div class="loading-bar" style="width: 80%;">
+                                <p>80%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
-                        <p>C++</p>
+                        <h3>C++</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 60%; text-align: center;">
-                                <p style="color: white;">60%</p>
+                            <div class="loading-bar" style="width: 60%;">
+                                <p>60%</p>
                             </div>
                         </div>
-                        <h3>Programs</h3>
+                        <h2>Programs</h2>
                         <!--LOADING BAR-->
-                        <p>Photoshop | Illustrator</p>
+                        <h3>Photoshop | Illustrator</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 90%; text-align: center;">
-                                <p style="color: white;">90%</p>
-                            </div>
-                        </div>
-                        <!--LOADING BAR-->
-                        <p>Unity</p>
-                        <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 80%; text-align: center;">
-                                <p style="color: white;">80%</p>
+                            <div class="loading-bar" style="width: 90%;">
+                                <p>90%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
-                        <p>Visual Studio | XCode</p>
+                        <h3>Unity</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 70%; text-align: center;">
-                                <p style="color: white;">70%</p>
+                            <div class="loading-bar" style="width: 80%;">
+                                <p>80%</p>
+                            </div>
+                        </div>
+                        <!--LOADING BAR-->
+                        <h3>Visual Studio | XCode</h3>
+                        <div class="loading-bar-back">
+                            <div class="loading-bar" style="width: 70%;">
+                                <p>70%</p>
                             </div>
                         </div>
                         
