--- a/nongrid.html
+++ b/nongrid.html
@@ -211,7 +211,7 @@
                 <div class="box">
                     <!--IMAGE-->
                     <div class="display-container">
-                        <img src="face.jpg" style="width: 100%;" alt="bradley morrison">
+                        <img src="https://fsmedia.imgix.net/54/32/7a/8a/ec22/4660/8416/075e70fc7201/chewbaccajpg.jpeg?rect=0%2C0%2C1000%2C500&dpr=2&auto=format%2Ccompress&w=650" style="width: 100%;" alt="bradley morrison">
                         <div class="text-over-image">
                             <h1 class="h1-name">Bradley Morrison</h1>
                         </div>
