--- a/nongrid.html
+++ b/nongrid.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - nonedge</title>
+    <!--icons stylesheet-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script src="main.js"></script>
     <style>
 
@@ -195,6 +197,17 @@
 
         }
 
+        .icons {
+            padding-right: 10px;
+            font-size: 20px;
+        }
+
+        .icons-large {
+            padding-right: 10px;
+            font-size: 25px;
+            color:#f55b7c;
+        }
+
     </style>
 </head>
 <!---->
@@ -215,12 +228,15 @@
                         </div>
                     </div>
                     <div class="inner-box">
-                        <h3>Developer</h3>
-                        <h3>Dundee, UK</h3>
+                        <h3><i class="icons fas fa-suitcase"></i>Developer</h3>
+                        <h3><i class="icons fas fa-location-arrow"></i>Dundee, UK</h3>
+                        <div>
+                        <h3><i class="icons fas fa-envelope" style="float: left;"></i></h3>
                         <h3 style="overflow-wrap: break-word; hyphens:auto">bradley_morrison&shy;@outlook.com</h3>
-                        <h3>07398721477</h3>
+                        </div>
+                        <h3><i class="icons fas fa-phone" style="float: left;"></i>07398721477</h3>
                         <hr>
-                        <h1>Areas of Expertise</h1>
+                        <h1><i class="icons-large fas fa-star-of-life"></i>Areas of Expertise</h1>
                         <h2>Languages</h2>
                         <!--LOADING BAR-->
                         <h3>HTML | CSS | PHP</h3>
@@ -278,8 +294,8 @@
                 <!--Personal Skills-->
                 <div class="box">
                     <div class="inner-box">
-                        <h1>Personal Skills</h1>
-                        <p> Highly creative & motivated</p>
+                        <h1><i class="icons-large fas fa-male"></i>Personal Skills</h1>
+                        <p>Highly creative & motivated</p>
                         <p>Problem solving</p>
                         <p>Attention to detail</p>
                         <p>Takes pride in all aspects of work and development</p>
@@ -289,7 +305,7 @@
                 <!--HOBBIES-->
                 <div class="box">
                     <div class="inner-box">
-                        <h1>Hobbies</h1>
+                        <h1><i class="icons-large fas fa-hiking"></i>Hobbies</h1>
                         <p> Programming has been a constant interest and hobby of mine throughout my life, 
                             I'm always working on some personal coding project. <br><br>I am also interested in music 
                             and play multiple instruments, mainly guitar and piano. <br><br> I also enjoy art, particularly 
@@ -301,7 +317,7 @@
                 <!--REFERENCES-->
                 <div class="box">
                         <div class="inner-box">
-                            <h1>References</h1>
+                            <h1><i class="icons-large fas fa-file-alt"></i>References</h1>
                             <p> Available on request.</p>
                             <p> email: bradley_morrison@outlook.com</p>
                         </div>
@@ -315,7 +331,7 @@
                     <!--PERSONAL SUMMARY-->
                     <div class="box">
                         <div class="inner-box-right">
-                                <h1>Personal Summary</h1>
+                                <h1><i class="icons-large fas fa-user-circle"></i>Personal Summary</h1>
                                 <p>
                                 A talented, driven and enthusiastic software developer with a proven record of going above 
                                 and beyond expectations, using a passion for all aspects of software to produce impressive 
@@ -335,7 +351,7 @@
                      <!--EDUCATION-->
                      <div class="box">
                          <div class="inner-box-right">
-                            <h1>Academic Qualifications</h1>
+                            <h1><i class="icons-large fas fa-graduation-cap"></i>Academic Qualifications</h1>
                             <br>
                             <h2>BSc (Hons) Computing and IT Practice</h2>
                             <h3>The Open University</h3>
@@ -353,7 +369,7 @@
                      <!--WORK EXPERIENCE-->
                      <div class="box col-12">
                         <div class="inner-box-right" style="padding: 0 20px;">
-                            <h1>Work Experience</h1>
+                            <h1><i class="icons-large fas fa-briefcase"></i>Work Experience</h1>
                             <div class="inline">
                                 <h3>Tiger Moon Interactive Limited</h3>
                                 <h2>Software Developer/Owner</h2>
@@ -405,7 +421,7 @@
                 <!--KEY SKILLS AND COMPETENCIES-->
                 <div class="box col-12">
                     <div class="inner-box-right">
-                        <h1>Key Skills and Competencies</h1>
+                        <h1><i class="icons-large fas fa-certificate"></i>Key Skills and Competencies</h1>
                         <ul class="ul-big">
                             <li>Innovative, highly creative and able to 'think out of the box'.</li>
                             <li>Passionate about all areas of software development.</li>
