--- a/nongrid.html
+++ b/nongrid.html
@@ -4,7 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - nonedge</title>
     <!--icons stylesheet-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://font.googleapis.com/css?family=Roboto">
     <script src="main.js"></script>
     <style>
 
@@ -71,7 +74,7 @@
         }
 
         html, body {
-            font-family: "Lucida Sans", sans-serif;
+            font-family: "Roboto", sans-serif;
             line-height: 1.5;
         }
 
@@ -198,12 +201,13 @@
         }
 
         .icons {
-            padding-right: 10px;
+            padding-right: 12px;
             font-size: 20px;
+            color:#f55b7c;
         }
 
         .icons-large {
-            padding-right: 10px;
+            padding-right: 12px;
             font-size: 25px;
             color:#f55b7c;
         }
@@ -355,15 +359,15 @@
                             <br>
                             <h2>BSc (Hons) Computing and IT Practice</h2>
                             <h3>The Open University</h3>
-                            <h3>2016 - 2018</h3>
+                            <h3 style="color:#f55b7c"><i class="icons fas fa-calendar-alt"></i>2016 - 2018</h3>
                             <hr>
                             <h2>HND Computer Software Development</h2>
                             <h3>Dundee and Angus College</h3>
-                            <h3>2014 - 2016</h3>
+                            <h3 style="color:#f55b7c"><i class="icons fas fa-calendar-alt"></i>2014 - 2016</h3>
                             <hr>
                             <h2>5 Highers | 3 Intermediate 2's | 8 Standard Grades</h2>
                             <h3>Bell Baxter High School</h3>
-                            <h3>2004 - 2010</h3>
+                            <h3 style="color:#f55b7c"><i class="icons fas fa-calendar-alt"></i>2004 - 2010</h3>
                          </div>
                      </div>
                      <!--WORK EXPERIENCE-->
@@ -373,45 +377,45 @@
                             <div class="inline">
                                 <h3>Tiger Moon Interactive Limited</h3>
                                 <h2>Software Developer/Owner</h2>
-                                <h3>June 2014 - August 2018</h3>
+                                <h3 style="color:#f55b7c"><i class="icons fas fa-calendar-alt"></i>June 2014 - August 2018</h3>
                                 <p>
                                         Formed a limited company with a University colleague to develop interactive 
                                         software, websites and games. While studying for our Degree, we produced work 
                                         for multiple clients while also creating our own interactive products.
                                 </p>
                                 <h3>Duties:</h3>
-                                <ul>
-                                    <li>Responsible for daily running of company (sales, taxes etc).</li>
-                                    <li>Designing and developing successful websites for clients.</li>
-                                    <li>Designing and developing multiple games for iOS.</li>
-                                    <li>Communicating with clients and prospective customers.</li>
-                                    <li>Creating original art assets and graphical content.</li>
-                                    <li>Acquiring investment and crowdfunding campaigns.</li>
-                                    <li>Creating and performing pitches/presentations to clients and tech fairs.</li>
-                                    <li>Marketing and promoting developed products.</li>
+                                <div>
+                                    <p>Responsible for daily running of company (sales, taxes etc).</p><hr>
+                                    <p>Designing and developing successful websites for clients.</p><hr>
+                                    <p>Designing and developing multiple games for iOS.</p><hr>
+                                    <p>Communicating with clients and prospective customers.</p><hr>
+                                    <p>Creating original art assets and graphical content.</p><hr>
+                                    <p>Acquiring investment and crowdfunding campaigns.</p><hr>
+                                    <p>Creating and performing pitches/presentations to clients and tech fairs.</p><hr>
+                                    <p>Marketing and promoting developed products.</p><hr>
                                     <br>
-                                </ul>
+                                </div>
                             </div>
                             
                             <div class="inline-right">
                                 <hr class="hr-mobile">
                                 <h3>Siblings Reunited (STAR)</h3>
                                 <h2>Volunteer</h2>
-                                <h3>Jan 2013 - Ongoing</h3>
+                                <h3 style="color:#f55b7c"><i class="icons fas fa-calendar-alt"></i>Jan 2013 - Ongoing</h3>
                                 <p>
                                         I regularly volunteer for a local childrens charity, performing and maintaining 
                                         multiple technical aspects of their charity operations.
                                 </p>
                                 <h3>Duties:</h3>
-                                <ul>
-                                    <li>Helped design and solely created the charities website.</li>
-                                    <li>Maintain the website on a regular basis, adding and removing content as needed.</li>
-                                    <li>Developed a stand-alone booking software which is in constant use by the charity owner.</li>
-                                    <li>Developed a stand-alone booking software which is in constant use by the charity owner.</li>
-                                    <li>Graphical designing of multiple print assets (leaflets, posters, signage).</li>
-                                    <li>Regular technical advice and support.</li>
+                                <div>
+                                    <p>Helped design and solely created the charities website.</p><hr>
+                                    <p>Maintain the website on a regular basis, adding and removing content as needed.</p><hr>
+                                    <p>Developed a stand-alone booking software which is in constant use by the charity owner.</p><hr>
+                                    <p>Developed a stand-alone booking software which is in constant use by the charity owner.</p><hr>
+                                    <p>Graphical designing of multiple print assets (leaflets, posters, signage).</p><hr>
+                                    <p>Regular technical advice and support.</p><hr>
                                     <br>
-                                </ul>
+                                </div>
                             </div>
                             
                         </div>
